--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
     "oidc-client": "^1.11.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.0.3",
     "styled-components": "^5.3.5",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
