--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
+    "framer-motion": "^6.5.1",
     "jsonwebtoken": "^8.5.1",
     "oidc-client": "^1.11.5",
     "react": "^18.1.0",
