--- a/.env.production
+++ b/.env.production
@@ -2,11 +2,11 @@ REACT_APP_API_URL = 'https://psl-webapps/crm-api/api'
 REACT_APP_OIDC_USER = 'oidc.user:https://palmbookingkrish.com:ebookkeeping-pwa'
 REACT_APP_AUTHORITY = 'https://palmbookingkrish.com'
 REACT_APP_CLIENT_ID = 'ebookkeeping-pwa'
-REACT_APP_CLIENT_ROOT =  'http://localhost:3000'
- REACT_APP_REDIRECT_URI  =  'http://localhost:3000/signin_callback.html'
-REACT_APP_POST_LOGOUT_REDIRECT =  'http://localhost:3000'
+REACT_APP_CLIENT_ROOT =  'https://frontend.palmbookingkrish.com'
+ REACT_APP_REDIRECT_URI  =  'https://frontend.palmbookingkrish.com/signin_callback.html'
+REACT_APP_POST_LOGOUT_REDIRECT =  'https://frontend.palmbookingkrish.com'
 REACT_APP_scope = 'openid profile ebookkeeping-api'
-REACT_APP_ClientCorsOrigin: 'http://localhost:3000'
+REACT_APP_ClientCorsOrigin: 'https://frontend.palmbookingkrish.com'
 REACT_APP_DEFAULT_USER = 'user'
 GENERATE_SOURCEMAP=false
 REACT_APP_RESPONSE_TYPE = 'code'
