--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "oidc-client": "^1.11.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^18.1.0",
     "react-google-login": "^5.2.2",
+    "react-loader-spinner": "^5.1.7-beta.1",
+    "react-loading-overlay": "^1.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
